--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@react-router/node": "^7.5.2",
     "@react-router/serve": "^7.5.2",
     "@syncfusion/ej2-base": "^29.1.36",
@@ -19,6 +20,7 @@
     "@syncfusion/ej2-react-maps": "^29.1.34",
     "@syncfusion/ej2-react-navigations": "^29.1.38",
     "@syncfusion/ej2-react-splitbuttons": "^29.1.33",
+    "appwrite": "^17.0.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "isbot": "^5.1.17",
