--- a/package.json
+++ b/package.json
@@ -21,17 +21,20 @@
     "@syncfusion/ej2-react-navigations": "^29.1.38",
     "@syncfusion/ej2-react-splitbuttons": "^29.1.33",
     "appwrite": "^17.0.2",
+    "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.2",
+    "stripe": "^18.0.0",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.2",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
